# colstract-rust

./: .gitignore  Cargo.toml  README.md  archive.sh  build.rs
assets/: config.toml
assets/templates/: colors-kitty.conf  colors-konsole.colorscheme  colors-nqq.css  colors-oomox  colors-putty.reg  colors-rofi-dark.rasi  colors-rofi-light.rasi  colors-speedcrunch.json  colors-sway  colors-themer.js  colors-tilix.json  colors-tty.sh  colors-vscode.json  colors-wal-dmenu.h  colors-wal-dwm.h  colors-wal-st.h  colors-wal-tabbed.h  colors.Xresources  colors.css  colors.hs  colors.scss  colors.sh  colors.styl  names.txt
src/: command.rs  config.rs  main.rs  render_template.rs  utils.rs
src/structures/: colors.rs  mod.rs  wallpaper.rs
