[package]
name = "colstract"
version = "0.1.0"
edition = "2018"
authors = ["Pirate Caveman <piratecaveman@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
handlebars = "4"
xreader = { git = "https://github.com/piratecaveman/xreader", tag = "v0.1.0" }
colordata = { git = "https://github.com/piratecaveman/colordata", tag = "v0.1.0" }
toml = "0.5"
serde = { version = "1", features = ["derive"] }
